--- a/index.html
+++ b/index.html
@@ -3,10 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
+
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    
+    <header>
+        <nav>
+            <h3>Awlad.H</h3>
+            <ul>
+                <li><a class="nav-button" href="#">Download Resume</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <main>
+        <div class="hero">
+            <div class="div-width">
+                <img class="hero-img" src="./images/Group.png" alt="Developer">
+                <h1>"In the near future, I hope to become a Developer."</h1>
+                <p class="all-p">I aspire to become a developer, honing my skills in coding, problem-solving, and innovative thinking. With a strong foundation in HTML, CSS, JavaScript, and React</p>
+
+                <a class="hero-btn" href="#">Contact With Me</a>
+
+            </div>
+        </div>
+
+        <div class="section-2">
+
+            <div class="div-width center">
+                <h2>Why Web Development??</h2>
+                <p class="all-p">web developers and software engineers have better chances of being able to demand a healthy work-life balance from their employer.</p>
+            </div>
+            <!-- layer 1 -->
+            <div class="layer">
+                <div class="layer-text">
+                    <h3 class="layer-h3" style="width: 350px;">I will Do Coding and Change The World</h3>
+                    <p class="all-p layer-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="nav-button" href="#">Learn More</a>
+
+                </div>
+                <div class="layer-img">
+                    <img src="./images/Layer_1.png" alt="">
+                </div>
+            </div>
+            <!-- layer 2 -->
+            <div class="layer">
+                <div>
+                    <img src="./images/Group-3.png" alt="">
+                </div>
+                <div class="layer-text">
+                    <h3 class="layer-h3" >I will help People by creating Modern Web System</h3>
+                    <p class="all-p layer-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="nav-button" href="#">Learn More</a>
+
+                </div>
+            </div>
+            <!-- layer 3 -->
+            <div class="layer">
+                <div class="layer-text">
+                    <h3 class="layer-h3" style="width: 350px;">I will Do Coding and Change The World</h3>
+                    <p class="all-p layer-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="nav-button" href="#">Learn More</a>
+
+                </div>
+                <div class="layer-img">
+                    <img src="./images/Group-4.png" alt="">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="section-3">
+            <div class="div-width center">
+                <h2>My Inspiration</h2>
+                <p class="all-p">web developers and software engineers have better chances of being able to demand a healthy work-life balance from their employer.</p>
+            </div>
+        </div>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
