added nav section and some texts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
 
-    <title>Document</title>
+    <title>Web Developer Portfolio</title>
 </head>
 <body>
     <header>
@@ -39,8 +39,8 @@
             <!-- layer 1 -->
             <div class="layer">
                 <div class="layer-text">
-                    <h3 class="layer-h3" style="width: 350px;">I will Do Coding and Change The World</h3>
-                    <p class="all-p layer-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <h3 class="layer-h3" style="width: 350px;">Web developers are empowered to make a difference</h3>
+                    <p class="all-p layer-p">As a web developer, you have the satisfaction of seeing your work come to life and have a tangible impact.</p>
                     <a class="nav-button" href="#">Learn More</a>
 
                 </div>
@@ -54,8 +54,8 @@
                     <img src="./images/Group-3.png" alt="">
                 </div>
                 <div class="layer-text">
-                    <h3 class="layer-h3" >I will help People by creating Modern Web System</h3>
-                    <p class="all-p layer-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <h3 class="layer-h3" >Web developers are paid much higher than average</h3>
+                    <p class="all-p layer-p">This high demand has inevitably resulted in high wages for programmers. </p>
                     <a class="nav-button" href="#">Learn More</a>
 
                 </div>
@@ -63,8 +63,8 @@
             <!-- layer 3 -->
             <div class="layer">
                 <div class="layer-text">
-                    <h3 class="layer-h3" style="width: 350px;">I will Do Coding and Change The World</h3>
-                    <p class="all-p layer-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <h3 class="layer-h3" style="width: 350px;">Web developers can work in many types of companies</h3>
+                    <p class="all-p layer-p">As a web developer, you have the opportunity to work for startups, agencies, large corporates, or even as a freelance developer. </p>
                     <a class="nav-button" href="#">Learn More</a>
 
                 </div>
@@ -78,7 +78,7 @@
         <div class="section-3">
             <div class="div-width center">
                 <h2>My Inspiration</h2>
-                <p class="all-p">web developers and software engineers have better chances of being able to demand a healthy work-life balance from their employer.</p>
+                <p class="all-p">The technology industry moves quickly, and so web developers are constantly learning and advancing in their careers.</p>
             </div>
         </div>
 
