my inspiration section added with video

--- a/index.html
+++ b/index.html
@@ -72,13 +72,16 @@
                     <img src="./images/Group-4.png" alt="">
                 </div>
             </div>
-
         </div>
 
         <div class="section-3">
             <div class="div-width center">
                 <h2>My Inspiration</h2>
                 <p class="all-p">The technology industry moves quickly, and so web developers are constantly learning and advancing in their careers.</p>
+            </div>
+
+            <div class="yt-video">
+                <iframe width="998" height="550" src="https://www.youtube.com/embed/JUwePydwbUI?si=l3pL4m2j0LuECxBd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
 
