Section 4 is added and 3 cards are added

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <title>Web Developer Portfolio</title>
 </head>
 <body>
+    <!-- header starts -->
     <header>
+        <!-- nav starts -->
         <nav>
-            <h3>Awlad.H</h3>
+            <h3>Maraj Anim</h3>
             <ul>
                 <li><a class="nav-button" href="#">Download Resume</a></li>
             </ul>
         </nav>
 
     </header>
-
+    <!-- main starts -->
     <main>
+        <!-- hero section starts -->
         <div class="hero">
             <div class="div-width">
                 <img class="hero-img" src="./images/Group.png" alt="Developer">
@@ -29,14 +32,14 @@
 
             </div>
         </div>
-
+        <!-- section 2 starts -->
         <div class="section-2">
 
             <div class="div-width center">
                 <h2>Why Web Development??</h2>
                 <p class="all-p">web developers and software engineers have better chances of being able to demand a healthy work-life balance from their employer.</p>
             </div>
-            <!-- layer 1 -->
+            <!-- layer 1 starts-->
             <div class="layer">
                 <div class="layer-text">
                     <h3 class="layer-h3" style="width: 350px;">Web developers are empowered to make a difference</h3>
@@ -48,7 +51,7 @@
                     <img src="./images/Layer_1.png" alt="">
                 </div>
             </div>
-            <!-- layer 2 -->
+            <!-- layer 2 starts-->
             <div class="layer">
                 <div>
                     <img src="./images/Group-3.png" alt="">
@@ -60,7 +63,7 @@
 
                 </div>
             </div>
-            <!-- layer 3 -->
+            <!-- layer 3 starts-->
             <div class="layer">
                 <div class="layer-text">
                     <h3 class="layer-h3" style="width: 350px;">Web developers can work in many types of companies</h3>
@@ -73,7 +76,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- section 3 starts -->
         <div class="section-3">
             <div class="div-width center">
                 <h2>My Inspiration</h2>
@@ -83,6 +86,39 @@
             <div class="yt-video">
                 <iframe width="998" height="550" src="https://www.youtube.com/embed/JUwePydwbUI?si=l3pL4m2j0LuECxBd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
+        </div>
+
+        <!-- section 4 starts -->
+        <div class="section-4 ">
+            <div class="div-width center">
+                <h2>My Current Target</h2>
+                <p class="all-p">My current target is to get a good knowledge about html, css and JavaScript.</p>
+            </div>
+
+            <div class="card-parent">
+                <div class="card card-1">
+                    <img src="./images/html.png" alt="html">
+                    <h3>HTML</h3>
+                    <p class="all-p">HTML is the standard markup language for Web pages.</p>
+                    <a href="#"> Learn More</a>
+                </div>
+
+                <div class="card card-2">
+                    <img src="./images/css.png" alt="css">
+                    <h3>CSS</h3>
+                    <p class="all-p">CSS is the language we use to style an HTML document.</p>
+                    <a href="#"> Learn More</a>
+                </div>
+
+                <div class="card card-3">
+                    <img src="./images/js.png" alt="js">
+                    <h3>JavaScript</h3>
+                    <p class="all-p">JavaScript often abbreviated as JS, is a programming language.</p>
+                    <a href="#"> Learn More</a>
+                </div>
+
+            </div>
+
         </div>
 
     </main>
