--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>"In the near future, I hope to become a Developer."</h1>
                 <p class="all-p">I aspire to become a developer, honing my skills in coding, problem-solving, and innovative thinking. With a strong foundation in HTML, CSS, JavaScript, and React</p>
 
-                <a class="hero-btn" href="#">Contact With Me</a>
+                <a class="hero-btn" href="#contact">Contact With Me</a>
 
             </div>
         </div>
@@ -44,7 +44,7 @@
                 <div class="layer-text">
                     <h3 class="layer-h3" style="width: 350px;">Web developers are empowered to make a difference</h3>
                     <p class="all-p layer-p">As a web developer, you have the satisfaction of seeing your work come to life and have a tangible impact.</p>
-                    <a class="nav-button" href="#">Learn More</a>
+                    <a target="_blank" class="nav-button" href="https://careerfoundry.com/en/blog/web-development/why-web-development/">Learn More</a>
 
                 </div>
                 <div class="layer-img">
@@ -59,7 +59,7 @@
                 <div class="layer-text">
                     <h3 class="layer-h3" >Web developers are paid much higher than average</h3>
                     <p class="all-p layer-p">This high demand has inevitably resulted in high wages for programmers. </p>
-                    <a class="nav-button" href="#">Learn More</a>
+                    <a target="_blank" class="nav-button" href="https://careerfoundry.com/en/blog/web-development/why-web-development/">Learn More</a>
 
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="layer-text">
                     <h3 class="layer-h3" style="width: 350px;">Web developers can work in many types of companies</h3>
                     <p class="all-p layer-p">As a web developer, you have the opportunity to work for startups, agencies, large corporates, or even as a freelance developer. </p>
-                    <a class="nav-button" href="#">Learn More</a>
+                    <a target="_blank" class="nav-button" href="https://careerfoundry.com/en/blog/web-development/why-web-development/">Learn More</a>
 
                 </div>
                 <div class="layer-img">
@@ -100,27 +100,27 @@
                     <img src="./images/html.png" alt="html">
                     <h3>HTML</h3>
                     <p class="all-p">HTML is the standard markup language for Web pages.</p>
-                    <a href="#"> Learn More</a>
+                    <a target="_blank" href="https://en.wikipedia.org/wiki/HTML"> Learn More</a>
                 </div>
 
                 <div class="card card-2">
                     <img src="./images/css.png" alt="css">
                     <h3>CSS</h3>
                     <p class="all-p">CSS is the language we use to style an HTML document.</p>
-                    <a href="#"> Learn More</a>
+                    <a target="_blank" href="https://en.wikipedia.org/wiki/CSS"> Learn More</a>
                 </div>
 
                 <div class="card card-3">
                     <img src="./images/js.png" alt="js">
                     <h3>JavaScript</h3>
                     <p class="all-p">JavaScript often abbreviated as JS, is a programming language.</p>
-                    <a href="#"> Learn More</a>
+                    <a target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"> Learn More</a>
                 </div>
             </div>
         </div>
 
         <!-- section 5 starts -->
-        <div class="section-5">
+        <div class="section-5" id="contact">
             <div class="support">
                 <h2>I need support</h2>
                 <p>You can take any support from me or suggest me anything</p>
@@ -133,8 +133,16 @@
 
     </main>
 
+    <!-- footer section starts -->
     <footer>
-
+        <div class="footer-items">
+            <p>An Open Commitment by Maraj Anim</p>
+            <div>
+                <a href="https://www.facebook.com/marajanim/"><img src="/images/facebook.png" alt="facebook"></a>
+                <a href="https://github.com/marajanim/"><img src="/images/github.png" alt="github"></a>
+                <a href="https://www.linkedin.com/in/marajanim/"><img src="/images/linkedin-icon 1.png" alt="linkedin"></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
