some images were not shown so that fixed those issues

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         <div class="footer-items">
             <p>An Open Commitment by Maraj Anim</p>
             <div>
-                <a href="https://www.facebook.com/marajanim/"><img src="/images/facebook.png" alt="facebook"></a>
-                <a href="https://github.com/marajanim/"><img src="/images/github.png" alt="github"></a>
-                <a href="https://www.linkedin.com/in/marajanim/"><img src="/images/linkedin-icon 1.png" alt="linkedin"></a>
+                <a href="https://www.facebook.com/marajanim/"><img src="./images/facebook.png" alt="facebook"></a>
+                <a href="https://github.com/marajanim/"><img src="./images/github.png" alt="github"></a>
+                <a href="https://www.linkedin.com/in/marajanim/"><img src="./images/linkedin-icon.png" alt="linkedin"></a>
             </div>
         </div>
     </footer>
